# docs/swagger.yaml
@@ -31,48 +31,6 @@ definitions:
     required:
     - queries
     type: object
-  entity.MonitorGatewayDetail:
-    properties:
-      identifier:
-        type: string
-      name:
-        type: string
-      points:
-        items:
-          $ref: '#/definitions/entity.MonitorGatewayDetailPoint'
-        type: array
-      status:
-        type: integer
-      tags:
-        items:
-          type: string
-        type: array
-    type: object
-  entity.MonitorGatewayDetailPoint:
-    properties:
-      access_type:
-        description: 接入类型 ， IO/485
-        type: string
-      address_485:
-        description: 如果是485，则是地址
-        type: string
-      address_io:
-        description: 如果是io，则是AI1,DI1
-        type: string
-      device_identifier:
-        type: string
-      name:
-        type: string
-      status:
-        description: 状态，1：正常，0：异常
-        type: integer
-      update_time:
-        description: 格式 2006-01-02 15:04:05
-        type: string
-      value:
-        description: 值
-        type: string
-    type: object
   entity.MonitorListDbItem:
     properties:
       cache_hit_rate:
@@ -92,30 +50,6 @@ definitions:
         type: string
       server:
         description: 服务器
-        type: string
-      status:
-        description: 运行状态，1：正常，0：停止
-        type: integer
-    type: object
-  entity.MonitorListGatewayItem:
-    properties:
-      ai_port_count:
-        description: ai端口数
-        type: integer
-      ao_port_count:
-        description: ao端口数
-        type: integer
-      di_port_count:
-        description: di端口数
-        type: integer
-      do_port_count:
-        description: do端口数
-        type: integer
-      identifier:
-        description: 标识符
-        type: string
-      name:
-        description: 名称
         type: string
       status:
         description: 运行状态，1：正常，0：停止
@@ -365,36 +299,6 @@ paths:
       summary: 查询batch
       tags:
       - Metrics
-  /monitor/gateway/detail:
-    get:
-      consumes:
-      - application/json
-      description: 监控接口-gateway-detail
-      parameters:
-      - description: identifier
-        in: query
-        name: identifier
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功code和成功信息
-          schema:
-            allOf:
-            - $ref: '#/definitions/common.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/entity.MonitorGatewayDetail'
-              type: object
-        "500":
-          description: 错误code和错误信息
-          schema:
-            $ref: '#/definitions/common.Response'
-      summary: 监控接口-gateway-detail
-      tags:
-      - Monitor
   /monitor/list/dbs:
     get:
       consumes:
@@ -424,32 +328,6 @@ paths:
           schema:
             $ref: '#/definitions/common.Response'
       summary: 监控数据库列表
-      tags:
-      - Monitor
-  /monitor/list/gateways:
-    get:
-      consumes:
-      - application/json
-      description: 监控采集网关列表
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功code和成功信息
-          schema:
-            allOf:
-            - $ref: '#/definitions/common.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/entity.MonitorListGatewayItem'
-                  type: array
-              type: object
-        "500":
-          description: 错误code和错误信息
-          schema:
-            $ref: '#/definitions/common.Response'
-      summary: 监控采集网关列表
       tags:
       - Monitor
   /monitor/list/hosts:
